# mm

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitorderfile  CHANGELOG  CMakeLists.txt  CppProperties.json  CppResharper.DotSettings  LICENSE  LICENSE.md  README.md  meson.build  packages.manifest  repositories.manifest  update-subtrees.sh
MSVC_NMake/cairomm/: meson.build
mm/: CMakeLists.txt
mm-cairo/: .gitignore  Makefile.am  cairommconfig.h.meson  configure.ac  meson.build  meson_options.txt
mm-cairo/MSVC_NMake/: Makefile.vc  config-msvc.mak  create-lists-msvc.mak  detectenv-msvc.mak  generate-msvc.mak
mm-cairo/cairomm/: context.h  surface.cc
mm-cairo/data/: meson.build
mm-cairo/docs/reference/: Doxyfile.in  meson.build
mm-cairo/examples/: meson.build
mm-cairo/examples/surfaces/: image-surface.cc  pdf-surface.cc  ps-surface.cc
mm-cairo/examples/text/: text-rotate.cc  toy-text.cc  user-font.cc
mm-cairo/subprojects/: cairo.wrap
mm-cairo/tests/: Makefile.am  test-context.cc  test-font-face.cc
mm-cairo/tools/: doc-publish.sh  release-publish.sh
mm-cairo/untracked/: README
mm-gtk/mm/gdk/: applaunchcontext.cc  applaunchcontext.h  cairocontext.cc  cairocontext.h  cairoutils.h  clipboard.cc  clipboard.h  contentformats.cc  contentformats.h  contentformatsbuilder.cc  contentformatsbuilder.h  contentprovider.cc  contentprovider.h  cursor.cc  cursor.h  device.cc  device.h  devicepad.cc  devicepad.h  devicetool.cc  devicetool.h  display.cc  display.h  displaymanager.cc  displaymanager.h  drag.cc  drag.h  dragsurface.cc  dragsurface.h  drawcontext.cc  drawcontext.h  drop.cc  drop.h  enums.cc  enums.h  event.cc  event.h  frameclock.cc  frameclock.h  frametimings.cc  (+48 more)
mm-gtk/mm/gtk/: aboutdialog.cc  aboutdialog.h  accelerator.cc  accelerator.h  accessible.cc  accessible.h  actionable.cc  actionable.h  actionbar.cc  actionbar.h  adjustment.cc  adjustment.h  appchooser.cc  appchooser.h  appchooserbutton.cc  appchooserbutton.h  appchooserdialog.cc  appchooserdialog.h  appchooserwidget.cc  appchooserwidget.h  application.cc  application.h  applicationwindow.cc  applicationwindow.h  aspectframe.cc  aspectframe.h  assistant.cc  assistant.h  assistantpage.cc  (+486 more)
mm/adw/: CMakeLists.txt  application.cpp  window.cpp
mm/cairo/: CMakeLists.txt  context.cc  context.cpp  context.h  context_private.h  context_surface_quartz.cc  context_surface_win32.cc  context_surface_xlib.cc  device.cc  device.cpp  device.h  exception.cc  exception.cpp  exception.h  fontface.cc  fontface.cpp  fontface.h  fontoptions.cc  fontoptions.cpp  fontoptions.h  matrix.cc  matrix.cpp  matrix.h  meson.build  mm-cairo.h  path.cc  path.cpp  path.h  pattern.cc  pattern.cpp  pattern.h  private.cc  private.cpp  private.h  quartz_font.cc  quartz_font.h  quartz_surface.cc  quartz_surface.h  refptr.h  region.cc  (+23 more)
mm/examples/: CMakeLists.txt  main.cc  main.cpp
mm/gdk/: CMakeLists.txt  applaunchcontext.cc  applaunchcontext.cpp  applaunchcontext.h  cairocontext.cc  cairocontext.cpp  cairocontext.h  cairoutils.cc  cairoutils.cpp  cairoutils.h  clipboard.cc  clipboard.cpp  clipboard.h  contentformats.cc  contentformats.cpp  contentformats.h  contentformatsbuilder.cc  contentformatsbuilder.cpp  contentformatsbuilder.h  contentprovider.cc  contentprovider.cpp  contentprovider.h  cursor.cc  cursor.cpp  cursor.h  device.cc  device.cpp  device.h  devicepad.cc  devicepad.cpp  devicepad.h  devicetool.cc  devicetool.cpp  devicetool.h  devicewithpad.cc  devicewithpad.cpp  devicewithpad.h  display.cc  display.cpp  display.h  (+113 more)
mm/gio/: CMakeLists.txt  action.cc  action.cpp  action.h  actiongroup.cc  actiongroup.cpp  actiongroup.h  actionmap.cc  actionmap.cpp  actionmap.h  appinfo.cc  appinfo.cpp  appinfo.h  appinfomonitor.cc  appinfomonitor.cpp  appinfomonitor.h  applaunchcontext.cc  applaunchcontext.cpp  applaunchcontext.h  application.cc  application.cpp  application.h  applicationcommandline.cc  applicationcommandline.cpp  applicationcommandline.h  asyncinitable.cc  asyncinitable.cpp  asyncinitable.h  asyncresult.cc  asyncresult.cpp  asyncresult.h  bufferedinputstream.cc  bufferedinputstream.cpp  bufferedinputstream.h  bufferedoutputstream.cc  bufferedoutputstream.cpp  bufferedoutputstream.h  cancellable.cc  cancellable.cpp  cancellable.h  (+394 more)
mm/glib/: CMakeLists.txt  base64.cc  base64.cpp  base64.h  binding.cc  binding.cpp  binding.h  bytearray.cc  bytearray.cpp  bytearray.h  bytes.cc  bytes.cpp  bytes.h  checksum.cc  checksum.cpp  checksum.h  class.cc  class.cpp  class.h  containerhandle_shared.h  convert.cc  convert.cpp  convert.h  date.cc  date.cpp  date.h  datetime.cc  datetime.cpp  datetime.h  debug.cc  dispatcher.cc  dispatcher.cpp  dispatcher.h  enums.cc  enums.cpp  environ.cc  environ.cpp  environ.h  error.cc  error.cpp  (+130 more)
mm/gtk/: CMakeLists.txt  aboutdialog.cc  aboutdialog.cpp  aboutdialog.h  accelerator.cc  accelerator.cpp  accelerator.h  accelkey.cc  accelkey.cpp  accelkey.h  accessible.cc  accessible.cpp  accessible.h  actionable.cc  actionable.cpp  actionable.h  actionbar.cc  actionbar.cpp  actionbar.h  adjustment.cc  adjustment.cpp  adjustment.h  appchooser.cc  appchooser.cpp  appchooser.h  appchooserbutton.cc  appchooserbutton.cpp  appchooserbutton.h  appchooserdialog.cc  appchooserdialog.cpp  appchooserdialog.h  appchooserwidget.cc  appchooserwidget.cpp  appchooserwidget.h  application.cc  application.cpp  application.h  applicationwindow.cc  applicationwindow.cpp  applicationwindow.h  (+752 more)
mm/pango/: CMakeLists.txt  LICENSE.md  attributes.cc  attributes.cpp  attributes.h  attriter.cc  attriter.cpp  attriter.h  attrlist.cc  attrlist.cpp  attrlist.h  cairofontmap.cc  cairofontmap.cpp  cairofontmap.h  cairofontmapimpl.cc  cairofontmapimpl.cpp  cairofontmapimpl.h  color.cc  color.cpp  color.h  context.cc  context.cpp  context.h  coverage.cc  coverage.cpp  coverage.h  font.cc  font.cpp  font.h  fontdescription.cc  fontdescription.cpp  fontdescription.h  fontface.cc  fontface.cpp  fontface.h  fontfamily.cc  fontfamily.cpp  fontfamily.h  fontmap.cc  fontmap.cpp  (+49 more)
tests/cairo/: meson.build
(+8051 files in other folders)
