mm_gio_sources = [
  'action.cc',
  'actiongroup.cc',
  'actiongroup.h',
  'action.h',
  'actionmap.cc',
  'actionmap.h',
  'appinfo.cc',
  'appinfo.h',
  'appinfomonitor.cc',
  'appinfomonitor.h',
  'applaunchcontext.cc',
  'applaunchcontext.h',
  'application.cc',
  'applicationcommandline.cc',
  'applicationcommandline.h',
  'application.h',
  'asyncinitable.cc',
  'asyncinitable.h',
  'asyncresult.cc',
  'asyncresult.h',
  'bufferedinputstream.cc',
  'bufferedinputstream.h',
  'bufferedoutputstream.cc',
  'bufferedoutputstream.h',
  'cancellable.cc',
  'cancellable.h',
  'charsetconverter.cc',
  'charsetconverter.h',
  'contenttype.cc',
  'contenttype.h',
  'converter.cc',
  'converter.h',
  'converterinputstream.cc',
  'converterinputstream.h',
  'converteroutputstream.cc',
  'converteroutputstream.h',
  'credentials.cc',
  'credentials.h',
  'datainputstream.cc',
  'datainputstream.h',
  'dataoutputstream.cc',
  'dataoutputstream.h',
  'dbusactiongroup.cc',
  'dbusactiongroup.h',
  'dbusaddress.cc',
  'dbusaddress.h',
  'dbusauthobserver.cc',
  'dbusauthobserver.h',
  'dbusconnection.cc',
  'dbusconnection.h',
  'dbuserror.cc',
  'dbuserror.h',
  'dbuserrorutils.cc',
  'dbuserrorutils.h',
  'dbusinterface.cc',
  'dbusinterface.h',
  'dbusinterfaceskeleton.cc',
  'dbusinterfaceskeleton.h',
  'dbusinterfacevtable.cc',
  'dbusinterfacevtable.h',
  'dbusintrospection.cc',
  'dbusintrospection.h',
  'dbusmenumodel.cc',
  'dbusmenumodel.h',
  'dbusmessage.cc',
  'dbusmessage.h',
  'dbusmethodinvocation.cc',
  'dbusmethodinvocation.h',
  'dbusobject.cc',
  'dbusobject.h',
  'dbusobjectmanager.cc',
  'dbusobjectmanagerclient.cc',
  'dbusobjectmanagerclient.h',
  'dbusobjectmanager.h',
  'dbusobjectmanagerserver.cc',
  'dbusobjectmanagerserver.h',
  'dbusobjectproxy.cc',
  'dbusobjectproxy.h',
  'dbusobjectskeleton.cc',
  'dbusobjectskeleton.h',
  'dbusownname.cc',
  'dbusownname.h',
  'dbusproxy.cc',
  'dbusproxy.h',
  'dbusserver.cc',
  'dbusserver.h',
  'dbussubtreevtable.cc',
  'dbussubtreevtable.h',
  'dbusutils.cc',
  'dbusutils.h',
  'dbuswatchname.cc',
  'dbuswatchname.h',
  'desktopappinfo.cc',
  'desktopappinfo.h',
  'drive.cc',
  'drive.h',
  'dummy_header.h',
  'emblem.cc',
  'emblemedicon.cc',
  'emblemedicon.h',
  'emblem.h',
  'enums.cc',
  'enums.h',
  'error.cc',
  'error.h',
  'fileattributeinfo.cc',
  'fileattributeinfo.h',
  'fileattributeinfolist.cc',
  'fileattributeinfolist.h',
  'file.cc',
  'filedescriptorbased.cc',
  'filedescriptorbased.h',
  'fileenumerator.cc',
  'fileenumerator.h',
  'file.h',
  'fileicon.cc',
  'fileicon.h',
  'fileinfo.cc',
  'fileinfo.h',
  'fileinputstream.cc',
  'fileinputstream.h',
  'fileiostream.cc',
  'fileiostream.h',
  'filemonitor.cc',
  'filemonitor.h',
  'filenamecompleter.cc',
  'filenamecompleter.h',
  'fileoutputstream.cc',
  'fileoutputstream.h',
  'filterinputstream.cc',
  'filterinputstream.h',
  'filteroutputstream.cc',
  'filteroutputstream.h',
  'gioconfig.h',
  'gio.h',
  'icon.cc',
  'icon.h',
  'inetaddress.cc',
  'inetaddress.h',
  'inetsocketaddress.cc',
  'inetsocketaddress.h',
  'initable.cc',
  'initable.h',
  'init.cc',
  'init.h',
  'inputstream.cc',
  'inputstream.h',
  'iostream.cc',
  'iostream.h',
  'listmodel.cc',
  'listmodel.h',
  'liststore.cc',
  'liststore.h',
  'loadableicon.cc',
  'loadableicon.h',
  'memoryinputstream.cc',
  'memoryinputstream.h',
  'memoryoutputstream.cc',
  'memoryoutputstream.h',
  'menuattributeiter.cc',
  'menuattributeiter.h',
  'menu.cc',
  'menu.h',
  'menuitem.cc',
  'menuitem.h',
  'menulinkiter.cc',
  'menulinkiter.h',
  'menumodel.cc',
  'menumodel.h',
  'mount.cc',
  'mount.h',
  'mountoperation.cc',
  'mountoperation.h',
  'networkaddress.cc',
  'networkaddress.h',
  'networkmonitor.cc',
  'networkmonitor.h',
  'networkservice.cc',
  'networkservice.h',
  'notification.cc',
  'notification.h',
  'outputstream.cc',
  'outputstream.h',
  'permission.cc',
  'permission.h',
  'pollableinputstream.cc',
  'pollableinputstream.h',
  'pollableoutputstream.cc',
  'pollableoutputstream.h',
  'propertyaction.cc',
  'propertyaction.h',
  'proxyaddress.cc',
  'proxyaddress.h',
  'proxy.cc',
  'proxy.h',
  'proxyresolver.cc',
  'proxyresolver.h',
  'remoteactiongroup.cc',
  'remoteactiongroup.h',
  'resolver.cc',
  'resolver.h',
  'resource.cc',
  'resource.h',
  'seekable.cc',
  'seekable.h',
  'settings.cc',
  'settings.h',
  'settingsschema.cc',
  'settingsschema.h',
  'settingsschemakey.cc',
  'settingsschemakey.h',
  'settingsschemasource.cc',
  'settingsschemasource.h',
  'simpleaction.cc',
  'simpleactiongroup.cc',
  'simpleactiongroup.h',
  'simpleaction.h',
  'simpleiostream.cc',
  'simpleiostream.h',
  'simplepermission.cc',
  'simplepermission.h',
  'slot_async.cc',
  'slot_async.h',
  'socketaddress.cc',
  'socketaddressenumerator.cc',
  'socketaddressenumerator.h',
  'socketaddress.h',
  'socket.cc',
  'socketclient.cc',
  'socketclient.h',
  'socketconnectable.cc',
  'socketconnectable.h',
  'socketconnection.cc',
  'socketconnection.h',
  'socketcontrolmessage.cc',
  'socketcontrolmessage.h',
  'socket.h',
  'socketlistener.cc',
  'socketlistener.h',
  'socketservice.cc',
  'socketservice.h',
  'socketsource.cc',
  'socketsource.h',
  'srvtarget.cc',
  'srvtarget.h',
  'tcpconnection.cc',
  'tcpconnection.h',
  'tcpwrapperconnection.cc',
  'tcpwrapperconnection.h',
  'themedicon.cc',
  'themedicon.h',
  'threadedsocketservice.cc',
  'threadedsocketservice.h',
  'tlscertificate.cc',
  'tlscertificate.h',
  'tlsclientconnection.cc',
  'tlsclientconnection.h',
  'tlsclientconnectionimpl.cc',
  'tlsclientconnectionimpl.h',
  'tlsconnection.cc',
  'tlsconnection.h',
  'tlsdatabase.cc',
  'tlsdatabase.h',
  'tlsinteraction.cc',
  'tlsinteraction.h',
  'tlspassword.cc',
  'tlspassword.h',
  'tlsserverconnection.cc',
  'tlsserverconnection.h',
  'tlsserverconnectionimpl.cc',
  'tlsserverconnectionimpl.h',
  'unixconnection.cc',
  'unixconnection.h',
  'unixcredentialsmessage.cc',
  'unixcredentialsmessage.h',
  'unixfdlist.cc',
  'unixfdlist.h',
  'unixfdmessage.cc',
  'unixfdmessage.h',
  'unixinputstream.cc',
  'unixinputstream.h',
  'unixoutputstream.cc',
  'unixoutputstream.h',
  'unixsocketaddress.cc',
  'unixsocketaddress.h',
  'volume.cc',
  'volume.h',
  'volumemonitor.cc',
  'volumemonitor.h',
  'wrap_init.cc',
  'wrap_init.h',
  'zlibcompressor.cc',
  'zlibcompressor.h',
  'zlibdecompressor.cc',
  'zlibdecompressor.h',

  'private/actiongroup_p.h',
  'private/actionmap_p.h',
  'private/action_p.h',
  'private/appinfomonitor_p.h',
  'private/appinfo_p.h',
  'private/applaunchcontext_p.h',
  'private/applicationcommandline_p.h',
  'private/application_p.h',
  'private/asyncinitable_p.h',
  'private/asyncresult_p.h',
  'private/bufferedinputstream_p.h',
  'private/bufferedoutputstream_p.h',
  'private/cancellable_p.h',
  'private/charsetconverter_p.h',
  'private/converterinputstream_p.h',
  'private/converteroutputstream_p.h',
  'private/converter_p.h',
  'private/credentials_p.h',
  'private/datainputstream_p.h',
  'private/dataoutputstream_p.h',
  'private/dbusactiongroup_p.h',
  'private/dbusaddress_p.h',
  'private/dbusauthobserver_p.h',
  'private/dbusconnection_p.h',
  'private/dbuserror_p.h',
  'private/dbuserrorutils_p.h',
  'private/dbusinterface_p.h',
  'private/dbusinterfaceskeleton_p.h',
  'private/dbusinterfacevtable_p.h',
  'private/dbusintrospection_p.h',
  'private/dbusmenumodel_p.h',
  'private/dbusmessage_p.h',
  'private/dbusmethodinvocation_p.h',
  'private/dbusobjectmanagerclient_p.h',
  'private/dbusobjectmanager_p.h',
  'private/dbusobjectmanagerserver_p.h',
  'private/dbusobject_p.h',
  'private/dbusobjectproxy_p.h',
  'private/dbusobjectskeleton_p.h',
  'private/dbusownname_p.h',
  'private/dbusproxy_p.h',
  'private/dbusserver_p.h',
  'private/dbussubtreevtable_p.h',
  'private/dbusutils_p.h',
  'private/dbuswatchname_p.h',
  'private/desktopappinfo_p.h',
  'private/drive_p.h',
  'private/emblemedicon_p.h',
  'private/emblem_p.h',
  'private/enums_p.h',
  'private/error_p.h',
  'private/fileattributeinfolist_p.h',
  'private/fileattributeinfo_p.h',
  'private/filedescriptorbased_p.h',
  'private/fileenumerator_p.h',
  'private/fileicon_p.h',
  'private/fileinfo_p.h',
  'private/fileinputstream_p.h',
  'private/fileiostream_p.h',
  'private/filemonitor_p.h',
  'private/filenamecompleter_p.h',
  'private/fileoutputstream_p.h',
  'private/file_p.h',
  'private/filterinputstream_p.h',
  'private/filteroutputstream_p.h',
  'private/icon_p.h',
  'private/inetaddress_p.h',
  'private/inetsocketaddress_p.h',
  'private/initable_p.h',
  'private/inputstream_p.h',
  'private/iostream_p.h',
  'private/listmodel_p.h',
  'private/liststore_p.h',
  'private/loadableicon_p.h',
  'private/memoryinputstream_p.h',
  'private/memoryoutputstream_p.h',
  'private/menuattributeiter_p.h',
  'private/menuitem_p.h',
  'private/menulinkiter_p.h',
  'private/menumodel_p.h',
  'private/menu_p.h',
  'private/mountoperation_p.h',
  'private/mount_p.h',
  'private/networkaddress_p.h',
  'private/networkmonitor_p.h',
  'private/networkservice_p.h',
  'private/notification_p.h',
  'private/outputstream_p.h',
  'private/permission_p.h',
  'private/pollableinputstream_p.h',
  'private/pollableoutputstream_p.h',
  'private/propertyaction_p.h',
  'private/proxyaddress_p.h',
  'private/proxy_p.h',
  'private/proxyresolver_p.h',
  'private/remoteactiongroup_p.h',
  'private/resolver_p.h',
  'private/resource_p.h',
  'private/seekable_p.h',
  'private/settings_p.h',
  'private/settingsschemakey_p.h',
  'private/settingsschema_p.h',
  'private/settingsschemasource_p.h',
  'private/simpleactiongroup_p.h',
  'private/simpleaction_p.h',
  'private/simpleiostream_p.h',
  'private/simplepermission_p.h',
  'private/socketaddressenumerator_p.h',
  'private/socketaddress_p.h',
  'private/socketclient_p.h',
  'private/socketconnectable_p.h',
  'private/socketconnection_p.h',
  'private/socketcontrolmessage_p.h',
  'private/socketlistener_p.h',
  'private/socket_p.h',
  'private/socketservice_p.h',
  'private/srvtarget_p.h',
  'private/tcpconnection_p.h',
  'private/tcpwrapperconnection_p.h',
  'private/themedicon_p.h',
  'private/threadedsocketservice_p.h',
  'private/tlscertificate_p.h',
  'private/tlsclientconnection_p.h',
  'private/tlsconnection_p.h',
  'private/tlsdatabase_p.h',
  'private/tlsinteraction_p.h',
  'private/tlspassword_p.h',
  'private/tlsserverconnection_p.h',
  'private/unixconnection_p.h',
  'private/unixcredentialsmessage_p.h',
  'private/unixfdlist_p.h',
  'private/unixfdmessage_p.h',
  'private/unixinputstream_p.h',
  'private/unixoutputstream_p.h',
  'private/unixsocketaddress_p.h',
  'private/volumemonitor_p.h',
  'private/volume_p.h',
  'private/zlibcompressor_p.h',
  'private/zlibdecompressor_p.h'
]

mm_gio_cpp_args = [
  '-DGIOMM_BUILD=1'
]

mm_gio_include_directories = [
  '..' / '..',
  '..' / '..' / 'subprojects' / 'libsigcplusplus'
]

mm_gio_dependencies = [
  dependency('sigc++-3.0', fallback:['sigc++-3.0']),
  dependency('gobject-2.0'),
  dependency('glib-2.0'),
  dependency('gio-2.0'),
  dependency('gio-unix-2.0'),
  dependency('gmodule-2.0')
]

mm_gio_library = library('mm-gio',
  mm_gio_sources,
  dependencies: mm_gio_dependencies,
  implicit_include_directories: false,
  include_directories: mm_gio_include_directories,
  cpp_args: mm_gio_cpp_args,
  link_with: mm_glib_library,
  install: true
)
